--- a/view/common/block-layout/cards-compact.phtml
+++ b/view/common/block-layout/cards-compact.phtml
@@ -2,7 +2,7 @@
 $itemCount = count($this->pages);
 
 ?>
-<div id="block-<?php echo $this->blockId; ?>" class="compact-card-listing item-count-<?php echo $itemCount; ?> <?php echo $this->regionClass; ?> <?php echo $this->classes ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="block-<?php echo $this->blockId; ?>" class="flex-container flex-dir-row grid-x grid-margin-x grid-margin-y compact-card-listing item-count-<?php echo $itemCount; ?> <?php echo $this->regionClass; ?> <?php echo $this->classes ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php if ($this->hasTitle || $this->hasIntroduction): ?>
         <div class='title-area'>
             <?php if ($this->hasTitle): ?>
@@ -20,7 +20,7 @@ $itemCount = count($this->pages);
     <?php endif; ?>
     <?php if ($this->hasPages): ?>
         <?php foreach($this->pages as $page): ?>
-            <div class="card-compact">
+            <div class="cell card-compact medium-6 large-4 flex-container flex-dir-column">
                 <?php if ($page['hasEmbeddedBlocks'] && array_key_exists('representativeImage',$page['embeddedBlocks'])): ?>
                     <?php echo $page['embeddedBlocks']['representativeImage'][0]; ?>
                 <?php endif; ?>
