--- a/view/common/block-layout/cards.phtml
+++ b/view/common/block-layout/cards.phtml
@@ -8,7 +8,7 @@
         </div>
     <?php endif; ?>
     <?php if ($this->hasPages): ?>
-    <div class="cards grid-x grid-margin-x grid-margin-y margin-vertical-1">
+    <div class="full-width-css cards grid-x grid-margin-x grid-margin-y margin-vertical-1">
         <?php foreach($this->pages as $page): ?>
             <div class='card cell medium-6 large-4 radius bordered shadow'>
                 <?php if ($page['hasEmbeddedBlocks'] && array_key_exists('representativeImage',$page['embeddedBlocks'])): ?>
@@ -24,7 +24,7 @@
                 <?php if ($page['hasEmbeddedBlocks'] && array_key_exists('excerpt',$page['embeddedBlocks'])): ?>
                     <?php echo $page['embeddedBlocks']['excerpt'][0]; ?>
                 <?php endif; ?>
-                <a class='button alert' href='<?php echo $page['o:url']; ?>'>View this page</a>
+                <a class='button primary' href='<?php echo $page['o:url']; ?>'>View this page</a>
             </div>
         <?php endforeach ?>
     </div>
