Added slideshow block

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1521,6 +1521,12 @@ position: absolute;
 top: 40%;
 }
 
+/*Slideshow*/
+.slideshow-block {
+    background: $uom-footer;
+    height: 100vh;
+}
+
 /*Breadcrumbs*/
 nav.breadcrumbs {
     margin-top: -1rem;
