--- a/view/common/block-layout/section-intro-splash.phtml
+++ b/view/common/block-layout/section-intro-splash.phtml
@@ -1,5 +1,5 @@
 <div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x grid-padding-x margin-bottom-1 flex-container section-intro-splash region <?php echo $this->regionClass; ?>  <?php echo $titleSlideTextAlignment ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
-    <div class="items">
+    <div class="large-7 item-listing-image items">
         <?php foreach ($attachments as $attachment): ?>
             <?php
                 $item = $attachment->item();
@@ -14,7 +14,7 @@
                       <figure>
                           <?php echo $image; ?>
                           <?php if ($attachment->caption()): ?>
-                            <figcaption><?php echo $attachment->caption(); ?></figcaption>
+                            <figcaption class="orbit-caption caption"><?php echo $attachment->caption(); ?></figcaption>
                           <?php endif; ?>
                       </figure>
                     <?php endif; ?>
@@ -22,7 +22,9 @@
             </div>
         <?php endforeach; ?>
     </div>
-    <div class="<div class='large-5 grid-y grid-padding-y padding-2 title-area background-colour-uom-footer flex-container align-spaced item resource introduction">
+
+
+    <div class="large-5 grid-y grid-padding-y padding-2 title-area background-colour-uom-footer flex-container align-spaced">
         <div class='introductory-text'>
             <?php if (!empty($titleSlideTitle)): ?>
                 <h1><?php echo $titleSlideTitle; ?></h1>
