--- a/view/common/block-layout/section-intro-splash.phtml
+++ b/view/common/block-layout/section-intro-splash.phtml
@@ -27,7 +27,7 @@
     <div class="large-5 grid-y grid-padding-y padding-2 title-area background-colour-uom-footer flex-container align-spaced">
         <div class='introductory-text'>
             <?php if (!empty($titleSlideTitle)): ?>
-                <h1><?php echo $titleSlideTitle; ?></h1>
+                <h2 class="h1"><?php echo $titleSlideTitle; ?></h2>
             <?php endif; ?>
             <?php if (!empty($titleSlideIntro)): ?>
                 <?php echo $titleSlideIntro; ?>
