--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1250,7 +1250,7 @@ nav.title-bar {
     }
 }
 
-.background-colour-dark-grey {
+.background-colour-dark-gray {
     background-color: $dark-gray;
     color: $white;
     a {
@@ -1568,3 +1568,149 @@ nav.breadcrumbs {
         margin-top: -2rem;
     }
 }
+
+/*Quotations*/
+
+.pull-quote {
+  margin: 0 auto;
+  text-align: center;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  font-style: normal;
+  font-size: $pull-quote-fontsize-small;
+  max-width: $pull-quote-maxwidth;
+  line-height: 1.25em;
+  text-transform: uppercase;
+  color: $pull-quote-color;
+  @if $pull-quote-gradient == true {
+    background: linear-gradient($secondary-color, $pull-quote-color);
+  } @else if $pull-quote-gradient == false {
+    background: $pull-quote-color; // sets text color
+  }
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  &:before {
+    content: '';
+  }
+
+  &:after {
+    content: '';
+  }
+
+  @include breakpoint(medium) {
+    font-size: $pull-quote-fontsize-medium-up;
+    max-width: calc(#{$pull-quote-maxwidth} - 5%);
+    margin: unset;
+    margin: 10px 0 0 20px;
+    text-align: left;
+  }
+
+  @include breakpoint(large) {
+    max-width: calc(#{$pull-quote-maxwidth} + 5%);
+    margin-right: $pull-quote-offset-large;
+  }
+}
+
+/*Blockquote*/
+.main {
+    position : relative; 
+  } 
+  
+  
+  .mb-wrap {
+    margin : 20px auto; 
+    padding : 20px; 
+    position : relative; 
+    width : 300px; 
+  } 
+  
+  .mb-wrap p {
+    margin : 0; 
+    padding : 0; 
+  }
+  
+  .mb-wrap blockquote {
+    margin : 0; 
+    padding : 0; 
+    position : relative; 
+  } 
+  
+  .mb-wrap cite {
+    font-style : normal; 
+  } 
+  
+  .mb-style-2 blockquote {
+    padding-top : 150px; 
+  } 
+  
+  .mb-style-2 blockquote:after {
+      background: none repeat scroll 0 0 $warning-color;
+      border-radius: 50% 50% 50% 50%;
+      color: rgba(255, 255, 255, 0.5);
+      content: "❞";
+      font-family: 'icons';
+      font-size: 70px;
+      height: 130px;
+      left: 50%;
+      line-height: 130px;
+      margin-left: -65px;
+      position: absolute;
+      text-align: center;
+      text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
+      top: 0;
+      width: 130px;
+  }
+  .mb-style-2 blockquote:before {
+      border-left: 5px solid rgba($warning-color, 0.5);
+      border-radius: 50% 50% 50% 50%;
+      content: "";
+      height: 500px;
+      left: -50px;
+      position: absolute;
+      top: 0;
+      width: 500px;
+      z-index: -1;
+  }
+  
+  .mb-style-2 blockquote p {
+    background : none repeat scroll 0 0 rgba($light-gray, 0.5); 
+    box-shadow : 0 -0.2rem 0 rgba($light-gray, 0.2); 
+    color : rgba($secondary-color, 0.8); ; 
+    display : inline; 
+    font-style : italic; 
+    font-size : 28px; 
+    line-height : 46px; 
+    text-shadow : 0 1px 1px rgba($medium-gray, 0.5);  
+  } 
+  
+  .mb-attribution {
+    text-align : right; 
+  } 
+  
+   .mb-author {
+    color : $secondary-color; 
+    font-size : 18px; 
+    font-weight : bold; 
+    padding-top : 10px; 
+    text-shadow : 0 1px 1px rgba($light-gray, 0.2); 
+    text-transform : uppercase; 
+  }  
+  
+  cite a {
+    color : $primary-color; 
+    font-style : italic; 
+  } 
+  
+  cite a:hover {
+    color : $secondary-color; 
+  }
+
+  .cite-block:before, 
+  cite:before {
+    content: unset;
+  }
+  
+  blockquote {
+    border-left: unset;
+  }
