--- a/view/common/block-layout/homepage-splash.phtml
+++ b/view/common/block-layout/homepage-splash.phtml
@@ -25,7 +25,7 @@
    
 
     <div class="large-5 grid-y grid-padding-y padding-2 item resource introduction background-colour-uom-footer flex-container align-spaced">
-        <div class='introductory-text'>
+        <div class='flex-container flex-dir-column introductory-text flex-child-grow align-spaced'>
             <?php if (!empty($titleSlideTitle)): ?>
                 <h2 class="h1"><?php echo $titleSlideTitle; ?></h2>
             <?php endif; ?>
