--- a/view/common/block-layout/section-intro-splash.phtml
+++ b/view/common/block-layout/section-intro-splash.phtml
@@ -1,4 +1,14 @@
 <div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x grid-padding-x margin-bottom-1 flex-container section-intro-splash region <?php echo $this->regionClass; ?>  <?php echo $titleSlideTextAlignment ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
+    <div class="large-5 grid-y grid-padding-y padding-2 title-area background-colour-uom-footer flex-container align-spaced">
+        <div class='flex-container flex-dir-column introductory-text flex-child-grow align-spaced'>
+            <?php if (!empty($titleSlideTitle)): ?>
+                <h2 class="h1"><?php echo $titleSlideTitle; ?></h2>
+            <?php endif; ?>
+            <?php if (!empty($titleSlideIntro)): ?>
+                <?php echo $titleSlideIntro; ?>
+            <?php endif; ?>
+        </div>
+    </div>
     <div class="large-7 item-listing-image items">
         <?php foreach ($attachments as $attachment): ?>
             <?php
@@ -21,18 +31,6 @@
                 <?php endif; ?>
             </div>
         <?php endforeach; ?>
-    </div>
-
-
-    <div class="large-5 grid-y grid-padding-y padding-2 title-area background-colour-uom-footer flex-container align-spaced">
-        <div class='introductory-text'>
-            <?php if (!empty($titleSlideTitle)): ?>
-                <h2 class="h1"><?php echo $titleSlideTitle; ?></h2>
-            <?php endif; ?>
-            <?php if (!empty($titleSlideIntro)): ?>
-                <?php echo $titleSlideIntro; ?>
-            <?php endif; ?>
-        </div>
     </div>
 </div>
 
