--- a/view/common/block-layout/section-intro-splash.phtml
+++ b/view/common/block-layout/section-intro-splash.phtml
@@ -1,11 +1,11 @@
 <div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x grid-padding-x margin-bottom-1 flex-container section-intro-splash region <?php echo $this->regionClass; ?>  <?php echo $titleSlideTextAlignment ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
-    <div class="large-5 grid-y grid-padding-y padding-2 title-area background-colour-uom-footer flex-container align-spaced">
-        <div class='flex-container flex-dir-column introductory-text flex-child-grow align-spaced'>
+    <div class="large-5 grid-y grid-padding-y padding-2 title-area background-colour-uom-footer">
+        <div class='flex-container flex-dir-column introductory-text'>
             <?php if (!empty($titleSlideTitle)): ?>
-                <h2 class="h1"><?php echo $titleSlideTitle; ?></h2>
+                <h2 class="h1 padding-bottom-1"><?php echo $titleSlideTitle; ?></h2>
             <?php endif; ?>
             <?php if (!empty($titleSlideIntro)): ?>
-                <?php echo $titleSlideIntro; ?>
+                <p class="padding-1"><?php echo $titleSlideIntro; ?></p>
             <?php endif; ?>
         </div>
     </div>
