--- a/view/common/block-layout/section-intro-splash.phtml
+++ b/view/common/block-layout/section-intro-splash.phtml
@@ -5,7 +5,7 @@
                 <h2 class="h1 padding-bottom-1"><?php echo $titleSlideTitle; ?></h2>
             <?php endif; ?>
             <?php if (!empty($titleSlideIntro)): ?>
-                <p class="padding-1"><?php echo $titleSlideIntro; ?></p>
+                <p class="padding-1-medium-up"><?php echo $titleSlideIntro; ?></p>
             <?php endif; ?>
         </div>
     </div>
