--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1512,8 +1512,8 @@ ul.slick-dots li {
 .slick-prev:before {
     font-family: "Font Awesome 5 Free";
     content: "\f053";
-    margin: 0;
-    @include breakpoint(large) {
+    margin: 1rem;
+    @include breakpoint(medium) {
     margin: 2rem;
     }
 }
@@ -1522,7 +1522,7 @@ ul.slick-dots li {
     font-family: "Font Awesome 5 Free";
     content: "\f054";
     margin: 0;
-    @include breakpoint(large) {
+    @include breakpoint(medium) {
     margin: -1rem;
     }
 }
@@ -1608,12 +1608,12 @@ nav.breadcrumbs {
 
 .pull-quote {
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
   font-weight: 400;
   letter-spacing: 1.5px;
   font-style: normal;
   font-size: $pull-quote-fontsize-small;
-  max-width: $pull-quote-maxwidth;
+  max-width: 80%;
   line-height: 1.25em;
   text-transform: uppercase;
   color: $pull-quote-color;
@@ -1638,7 +1638,6 @@ nav.breadcrumbs {
     max-width: calc(#{$pull-quote-maxwidth} - 5%);
     margin: unset;
     margin: 10px 0 0 20px;
-    text-align: left;
   }
 
   @include breakpoint(large) {
@@ -1648,104 +1647,101 @@ nav.breadcrumbs {
 }
 
 /*Blockquote*/
-.main {
-    position : relative; 
-  } 
+/* center the blockquote in the page */
+.blockquote-wrapper {
+    display: flex;
+    height: 100%;
+    padding: 0 20px;
+    @include breakpoint(medium) {
+        height: 100vh;
+    }
+ }
+ 
+ /* Blockquote main style */
+ blockquote {
+     position: relative;
+     max-width: 620px;
+     margin: 2 * $global-margin auto;
+     align-self: center;
+     padding: unset;
+     border-left: unset;
+ }
+ 
+ /* Blockquote header */
+ blockquote h3 {
+     position: relative; /* for pseudos */
+     color: $alert-color;
+     font-size: 2 * $global-font-size;
+     font-weight: normal;
+     line-height: 1;
+     margin: 0;
+     border: 2px solid #fff;
+     border: solid 2px;
+     border-radius:20px;
+     padding: 25px;
+     @include breakpoint(large) {
+        font-size: 3 * $global-font-size;
+        line-height: 1.2;
+     }
+ }
+ 
+ /* Blockquote right double quotes */
+ blockquote h3:after {
+     content:"";
+     position: absolute;
+     border: 2px solid $alert-color;
+     border-radius: 0 50px 0 0;
+     width: 60px;
+     height: 60px;
+     bottom: -60px;
+     left: 50px;
+     border-bottom: none;
+     border-left: none;
+     z-index: 3; 
+ }
+ 
+ blockquote h3:before {
+     content:"";
+     position: absolute;
+     width: 80px;
+     border: 6px solid $warning-color;
+     bottom: -3px;
+     left: 50px;
+     z-index: 2;
+ }
   
+ /* Blockquote subheader */
+ blockquote cite {
+     position: relative;
+     color: $black;
+     font-size: 1.3 * $global-font-size;
+     font-weight: 400;
+     line-height: 1.2;
+     margin: 0;
+     padding-top: 15px;
+     z-index: 1;
+     margin-left:150px;
+     padding-left:12px;
+ }
+ 
   
-  .mb-wrap {
-    margin : 20px auto; 
-    padding : 20px; 
-    position : relative; 
-    width : 300px; 
-  } 
-  
-  .mb-wrap p {
-    margin : 0; 
-    padding : 0; 
-  }
-  
-  .mb-wrap blockquote {
-    margin : 0; 
-    padding : 0; 
-    position : relative; 
-  } 
-  
-  .mb-wrap cite {
-    font-style : normal; 
-  } 
-  
-  .mb-style-2 blockquote {
-    padding-top : 150px; 
-  } 
-  
-  .mb-style-2 blockquote:after {
-      background: none repeat scroll 0 0 $warning-color;
-      border-radius: 50% 50% 50% 50%;
-      color: rgba(255, 255, 255, 0.5);
-      content: "❞";
-      font-family: 'icons';
-      font-size: 70px;
-      height: 130px;
-      left: 50%;
-      line-height: 130px;
-      margin-left: -65px;
-      position: absolute;
-      text-align: center;
-      text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
-      top: 0;
-      width: 130px;
-  }
-  .mb-style-2 blockquote:before {
-      border-left: 5px solid rgba($warning-color, 0.5);
-      border-radius: 50% 50% 50% 50%;
-      content: "";
-      height: 500px;
-      left: -50px;
-      position: absolute;
-      top: 0;
-      width: 500px;
-      z-index: -1;
-  }
-  
-  .mb-style-2 blockquote p {
-    background : none repeat scroll 0 0 rgba($light-gray, 0.5); 
-    box-shadow : 0 -0.2rem 0 rgba($light-gray, 0.2); 
-    color : rgba($secondary-color, 0.8); ; 
-    display : inline; 
-    font-style : italic; 
-    font-size : 28px; 
-    line-height : 46px; 
-    text-shadow : 0 1px 1px rgba($medium-gray, 0.5);  
-  } 
-  
-  .mb-attribution {
-    text-align : right; 
-  } 
-  
-   .mb-author {
-    color : $secondary-color; 
-    font-size : 18px; 
-    font-weight : bold; 
-    padding-top : 10px; 
-    text-shadow : 0 1px 1px rgba($light-gray, 0.2); 
-    text-transform : uppercase; 
-  }  
-  
-  cite a {
-    color : $primary-color; 
-    font-style : italic; 
-  } 
-  
-  cite a:hover {
-    color : $secondary-color; 
-  }
+ blockquote cite:first-letter {
+   margin-left:-12px;
+   display: inline;
+ }
 
-  .cite-block:before, 
-  cite:before {
-    content: unset;
-  }
-  
-  blockquote {
-    border-left: unset;
-  }
+ blockquote cite p {
+    display: inline;
+    font-style: initial;
+    font-size: 1.2 * $global-font-size;
+ }
+
+ .background-colour-1 {
+    background: $warning-color;
+    margin-top: $global-margin;
+    margin-bottom: $global-margin;
+    @include breakpoint(large) {
+        margin-top: 2 * $global-margin;
+        margin-bottom: 2 * $global-margin;
+     }
+ }
