--- a/asset/scss/_settings.scss
+++ b/asset/scss/_settings.scss
@@ -217,7 +217,7 @@ $button-background-hover-lightness: -20%;
 $button-hollow-hover-lightness: -50%;
 $button-transition: background-color 0.25s ease-out,
 color 0.25s ease-out;
-$button-responsive-expanded: false;
+$button-responsive-expanded: true;
 // 12. Button Group
 // ----------------
 $buttongroup-margin: 1rem;
