--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1338,6 +1338,7 @@ nav.title-bar {
 
 .item-listing-image {
     position: relative;
+    background: $black;
 }
 
 .title-area {
@@ -1490,15 +1491,22 @@ ul.slick-dots {
     justify-content: center;
     align-items: center;
     margin-bottom: 0;
-    position: absolute;
-    bottom: 0;
     left: 50%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    transform: translateX(-50%);
+    position: relative;
 }
 
-ul.slick-dots li {
-    margin: 0.5rem 0.5rem 0 0;
+/*Remove button number text*/
+ul.slick-dots li.slick-active button {
+    color: transparent;
+    & include :hover {
+        color: transparent;
+    }
+    }
+
+ul.slick li button:hover {
+    color: transparent!important;
 }
 
 /*Slick Slider*/
