Adding new BlockPlus 'Full-Image' Resource with Text block

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1292,6 +1292,13 @@ nav.title-bar {
         }
 }
 
+/*Resource with Text - Image Cover*/
+.image-cover .left {
+    float: unset;
+    margin: unset;
+    max-width: unset;
+}
+
 /*Breadcrumb Navigation*/ 
 
 /*Agile Theme Tools*/ 
