Revisions to Full-size-img-cover Resource with Text block

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1299,6 +1299,10 @@ nav.title-bar {
     max-width: unset;
 }
 
+.image-cover-img {
+    position: relative;
+}
+
 /*Breadcrumb Navigation*/ 
 
 /*Agile Theme Tools*/ 
