--- a/view/common/block-layout/resource-text-full-size-image-cover.phtml
+++ b/view/common/block-layout/resource-text-full-size-image-cover.phtml
@@ -28,7 +28,7 @@ $lang = $filterLocale ? $this->lang() : null;
     </div>
     <?php endif; ?>
 
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6">
         <div class="attachments">
             <?php
             foreach ($attachments as $attachment):
