Revised Item Listing with Introduction
Added item count to head of the page

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1424,10 +1424,26 @@ figcaption.orbit-caption.caption p {
 /*New Item Listing with Introduction*/ 
 .item-listing-with-introduction {
     background: $warning-color;
+    padding: 2 * $global-padding;
 }
 
 .item-listing-title-area h3 {
     text-align: center;
+}
+
+.item-listing-item img {
+    height: 35rem;
+    width: 100%;
+    object-fit: cover;
+    @include breakpoint(medium) {
+        height: 25rem;
+    }
+    @include breakpoint(large) {
+        height: 30rem;
+    }
+    @include breakpoint(xlarge) {
+        height: 35rem;
+    }
 }
 
 /*Cards*/ 
