--- a/view/common/block-layout/item-listing.phtml
+++ b/view/common/block-layout/item-listing.phtml
@@ -1,11 +1,15 @@
-<div id="block-<?php echo $this->blockId; ?>" class="full-width-css item-listing-with-introduction grid-y grid-margin-y region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
+<?php
+                $itemCount = count($this->attachments);
+                ?>
+
+<div id="block-<?php echo $this->blockId; ?>" class="full-width-css item-listing-with-introduction grid-y grid-margin-y padding-2 region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
     <?php if ($this->hasTitle || $this->hasIntroduction): ?>
         <div class='item-listing-title-area grid-container padding-bottom-2'>
             <?php if ($this->hasTitle): ?>
-                <h3 class="h2 padding-vertical-2"><?php echo $this->title; ?></h3>
+                <h3 class="h2"><?php echo $this->title; ?></h3>
             <?php endif; ?>
             <?php if ($this->hasIntroduction): ?>
-                <div class='block-introduction'>
+                <div class='block-introduction medium-padding-2'>
                     <?php echo $this->introduction; ?>
                 </div>
             <?php endif; ?>
@@ -15,34 +19,36 @@
         </div>
     <?php endif; ?>
 
-    <?php foreach ($attachments as $attachment): ?>
-        <div class="grid-x grid-margin-x item-listing-item item resource flex-container flex-dir-column large-6 x-large-4">
-            <?php
-            $item = $attachment->item();
-            if ($item):
-                ?>
+    <div class="grid-x grid-margin-x flex-container">
+        <?php foreach ($attachments as $attachment): ?>
+            <div class="cell item-listing-item item resource flex-container flex-dir-column medium-6 xlarge-4 item-count-<?php echo $itemCount; ?>">
                 <?php
-                $title = $this->plugin('escapeHtml')($item->displayTitle());
-                $media = $attachment->media() ?: $item->primaryMedia();
-                if ($media):
-                    $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $item->linkRaw($this->thumbnail($media, $this->thumbnailType, ['alt' => $title])) : $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-                    echo $image;
-                endif;
-                ?>
-                <?php $showTitleOption = $this->showTitleOption; ?>
-                <?php if ($showTitleOption == 'item_title'): ?>
-                <h3><?php echo $item->link($item->displayTitle()); ?></h3>
-            <?php elseif ($showTitleOption == 'file_name'): ?>
-                <h3><?php echo $media->displayTitle(); ?></h3>
-            <?php endif; ?>
-            <?php endif; ?>
+                $item = $attachment->item();
+                if ($item):
+                    ?>
+                    <?php
+                    $title = $this->plugin('escapeHtml')($item->displayTitle());
+                    $media = $attachment->media() ?: $item->primaryMedia();
+                    if ($media):
+                        $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $item->linkRaw($this->thumbnail($media, $this->thumbnailType, ['alt' => $title])) : $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
+                        echo $image;
+                    endif;
+                    ?>
+                    <?php $showTitleOption = $this->showTitleOption; ?>
+                    <?php if ($showTitleOption == 'item_title'): ?>
+                    <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+                <?php elseif ($showTitleOption == 'file_name'): ?>
+                    <h3><?php echo $media->displayTitle(); ?></h3>
+                <?php endif; ?>
+                <?php endif; ?>
 
-            <?php
-            $caption = $attachment->caption();
-            if ($caption):
-                ?>
-                <div class="caption"><?php echo $caption; ?></div>
-            <?php endif; ?>
-        </div>
-    <?php endforeach; ?>
+                <?php
+                $caption = $attachment->caption();
+                if ($caption):
+                    ?>
+                    <div class="caption"><?php echo $caption; ?></div>
+                <?php endif; ?>
+            </div>
+        <?php endforeach; ?>
+    </div>
 </div>
