--- a/view/common/block-layout/callout.phtml
+++ b/view/common/block-layout/callout.phtml
@@ -1,8 +1,8 @@
 <div id="block-<?php echo $this->blockId; ?>" class="grid-x grid-padding-x callout-agile region ?> <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
-    <div class="cell medium-6 large-7 x-large-8 primary-text">
+    <div class="cell medium-6 large-7 xlarge-8 primary-text">
         <?php echo $this->html; ?>
     </div>
-    <div class="cell medium-6 large-5 x-large-4 pull-quote">
+    <div class="cell medium-6 large-5 xlarge-4 pull-quote">
         <?php echo $this->callout; ?>
     </div>
 </div>
